# hardwave-workspace

./: .env.example  CLAUDE.md  README.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs  models.rs  sync.rs
